# t5_chatbot

./: README.md  pyproject.toml  requirements.txt
t5_chatbot/: __main__.py  t5.py  t5_demo.py  tokenizer.py  train.py
t5_chatbot/muvtuber_chatbot_api/: README.md  __init__.py  chatbot.py  cooldown.py  grpc_server.py
t5_chatbot/muvtuber_chatbot_api/protos/: chatbot_pb2.py  chatbot_pb2_grpc.py
